Add support for standalone package